--- a/index.html
+++ b/index.html
@@ -94,12 +94,36 @@
   </header>
 
   <div class="course-card">
-    <h2>🛠️ Áreas Industriales y Oficios</h2>
+    <h2>🛠️ Área Industrial & Tecnología 4.0</h2>
     <ul>
-      <li>IA en Robótica y Mantenimiento Industrial</li>
-      <li>Reparación de PC y Celulares con Diagnóstico IA</li>
-      <li>Peluquería y Moda: Diseño Asistido por IA</li>
-      <li>Mecánica Automotriz y Escaneo Inteligente</li>
+      <li>IA en Robótica y Automatización</li>
+      <li>Mantenimiento Predictivo con IA</li>
+      <li>IA en Diagnóstico Electrónico de Vehículos</li>
+      <li>IA aplicada a Reparación de Computadoras y Celulares</li>
+      <li>Seguridad Industrial con Monitoreo Inteligente</li>
+    </ul>
+  </div>
+
+  <div class="course-card">
+    <h2>📊 Área Comercial & Negocios Digitales</h2>
+    <ul>
+      <li>Marketing Digital con Inteligencia Artificial</li>
+      <li>Chatbots con IA para Atención al Cliente</li>
+      <li>Inteligencia Artificial en Recursos Humanos (RRHH)</li>
+      <li>Análisis de Datos con IA en Excel</li>
+      <li>Enseñanza de Idiomas (Inglés) con IA</li>
+      <li>IA en Logística y Gestión Aduanera</li>
+      <li>Computación con Herramientas IA</li>
+    </ul>
+  </div>
+
+  <div class="course-card">
+    <h2>💅 Área Artesanal & Creatividad con IA</h2>
+    <ul>
+      <li>Diseño Asistido con IA en Peluquería y Maquillaje</li>
+      <li>Moda y Corte con IA: Patrones Automatizados</li>
+      <li>Ajedrez con Entrenamiento basado en IA</li>
+      <li>Manualidades y Creatividad Digital con IA</li>
     </ul>
   </div>
 
