--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academia Divino Niño Jesús | Certificación con IA</title>
+  <title>Academia Divino Niño Jesús | Formación Profesional con IA</title>
   <style>
     :root {
       --gold: #ffe082;
@@ -19,79 +19,97 @@
       font-family: 'Inter', 'Segoe UI', sans-serif;
       background-color: var(--bg);
       color: var(--text);
+      line-height: 1.6;
     }
 
     .main-container { padding: 20px; max-width: 900px; margin: auto; }
 
     /* HEADER */
     header { text-align: center; padding: 60px 20px; border-bottom: 1px solid rgba(255, 224, 130, 0.2); }
-    .logo-maestro { width: 200px; filter: drop-shadow(0 0 10px rgba(255,224,130,0.3)); }
-    h1 { font-size: 2.5rem; background: linear-gradient(90deg, var(--gold), #fff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+    .logo-maestro { width: 220px; filter: drop-shadow(0 0 10px rgba(255,224,130,0.3)); margin-bottom: 20px; }
+    h1 { font-size: 2.5rem; background: linear-gradient(90deg, var(--gold), #fff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin: 10px 0; }
 
     /* TARJETAS DE CURSOS */
     .course-card {
       background: var(--card-bg); border-radius: 20px; padding: 30px; margin: 30px 0;
       border: 1px solid rgba(255, 255, 255, 0.05); box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+      transition: transform 0.3s;
     }
-    h2 { color: var(--gold); }
-    li { padding: 10px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; align-items: center; }
+    .course-card:hover { transform: translateY(-5px); border-color: var(--gold); }
+    h2 { color: var(--gold); margin-top: 0; display: flex; align-items: center; gap: 10px; }
+    
+    ul { list-style: none; padding: 0; }
+    li { padding: 12px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; align-items: center; }
     li::before { content: "⚡"; margin-right: 15px; color: var(--gold); }
 
-    /* NUEVA SECCIÓN: CERTIFICACIÓN */
+    /* BOTONES */
+    .btn-gold {
+      display: block; width: 100%; max-width: 380px; padding: 20px; margin: 15px auto;
+      background: linear-gradient(135deg, var(--gold), var(--dark-gold));
+      color: #000; text-decoration: none; text-align: center; font-weight: 800;
+      border-radius: 12px; border: none; cursor: pointer; text-transform: uppercase; transition: 0.3s;
+    }
+    .btn-gold:hover { transform: scale(1.05); box-shadow: 0 0 20px rgba(255,224,130,0.4); }
+    .whatsapp-btn { background: #25d366; color: white; }
+    .whatsapp-btn:hover { background: #20ba5a; box-shadow: 0 0 20px rgba(37,211,102,0.4); }
+
+    /* CERTIFICACIÓN Y TESTIMONIOS */
     .cert-section {
       text-align: center; background: linear-gradient(rgba(255,224,130,0.05), transparent);
       padding: 40px; border-radius: 20px; border: 1px solid rgba(255,224,130,0.2); margin: 40px 0;
     }
-    .cert-icon { font-size: 50px; margin-bottom: 10px; }
-
-    /* NUEVA SECCIÓN: TESTIMONIOS */
-    .testimonials-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 30px; }
+    .testimonials-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin: 30px 0; }
     .testi-card { background: #111; padding: 20px; border-radius: 15px; border-left: 4px solid var(--gold); font-style: italic; }
-    .testi-author { display: block; margin-top: 10px; font-weight: bold; color: var(--gold); font-style: normal; font-size: 0.9em; }
+    .testi-author { display: block; margin-top: 10px; font-weight: bold; color: var(--gold); font-style: normal; }
 
-    /* BOTONES */
-    .btn-gold {
-      display: block; width: 100%; max-width: 350px; padding: 20px; margin: 15px auto;
-      background: linear-gradient(135deg, var(--gold), var(--dark-gold));
-      color: #000; text-decoration: none; text-align: center; font-weight: 800;
-      border-radius: 12px; border: none; cursor: pointer; text-transform: uppercase;
-    }
-    .whatsapp-btn { background: #25d366; color: white; }
-
-    /* CHATBOT */
+    /* CHATBOT FLOTANTE CON ROSTRO REAL */
     #bot-wrapper { position: fixed; bottom: 30px; right: 30px; z-index: 10000; }
     #chat-window {
-      display: none; width: 330px; height: 480px; background: #121212;
+      display: none; width: 340px; height: 500px; background: #121212;
       border: 1px solid var(--gold); border-radius: 20px; flex-direction: column;
-      box-shadow: 0 15px 50px rgba(0,0,0,0.8); overflow: hidden; margin-bottom: 15px;
+      box-shadow: 0 15px 50px rgba(0,0,0,0.9); overflow: hidden; margin-bottom: 15px;
     }
-    #chat-window.active { display: flex; }
+    #chat-window.active { display: flex; animation: slideIn 0.3s ease; }
+    @keyframes slideIn { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
+
     .chat-top { background: var(--gold); color: #000; padding: 15px; font-weight: bold; display: flex; justify-content: space-between; }
     #chat-messages { flex: 1; overflow-y: auto; padding: 15px; background: #0a0a0a; font-size: 0.9em; }
     .chat-input-container { padding: 10px; background: #161616; display: flex; gap: 5px; }
-    #chat-input { flex: 1; background: #222; border: 1px solid #333; color: white; padding: 10px; border-radius: 8px; }
-    .bot-trigger { background: var(--gold); width: 60px; height: 60px; border-radius: 50%; border: none; cursor: pointer; font-size: 25px; box-shadow: 0 5px 20px rgba(255,224,130,0.4); }
+    #chat-input { flex: 1; background: #222; border: 1px solid #333; color: white; padding: 10px; border-radius: 8px; outline: none; }
+    
+    .bot-trigger {
+      background: transparent; width: 75px; height: 75px; border-radius: 50%;
+      border: none; cursor: pointer; box-shadow: 0 5px 20px rgba(255,224,130,0.4);
+      transition: 0.3s; overflow: hidden; padding: 0;
+    }
+    .bot-trigger:hover { transform: scale(1.1); }
+    .bot-trigger img { width: 100%; height: 100%; object-fit: cover; border: 2px solid var(--gold); border-radius: 50%; }
 
     /* MODAL */
     #modalRegistro {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background: rgba(0,0,0,0.9); z-index: 99999; justify-content: center; align-items: center;
     }
-    .modal-box { background: var(--card-bg); padding: 30px; border-radius: 20px; border: 1px solid var(--gold); width: 90%; max-width: 380px; }
-    .modal-box input { width: 100%; padding: 12px; margin: 8px 0; background: #222; border: 1px solid #444; color: #fff; border-radius: 8px; box-sizing: border-box; }
+    .modal-box { background: var(--card-bg); padding: 35px; border-radius: 25px; border: 1px solid var(--gold); width: 90%; max-width: 400px; }
+    .modal-box input { width: 100%; padding: 15px; margin: 10px 0; background: #222; border: 1px solid #444; color: #fff; border-radius: 10px; box-sizing: border-box; }
 
-    @media (max-width: 600px) { .testimonials-grid { grid-template-columns: 1fr; } }
+    @media (max-width: 600px) {
+      .testimonials-grid { grid-template-columns: 1fr; }
+      #chat-window { width: 300px; right: 10px; }
+    }
   </style>
 </head>
 <body>
 
 <div class="main-container">
   <header>
-    <img src="https://i.imgur.com/msGwxhP.png" alt="Logo" class="logo-maestro">
+    <img src="https://i.imgur.com/msGwxhP.png" alt="Logo Academia" class="logo-maestro">
     <h1>Academia Divino Niño Jesús</h1>
-    <p>Formación Técnica Profesional con IA</p>
+    <p>Educación Técnica de Vanguardia con IA</p>
     <button onclick="openModal()" class="btn-gold">🚀 INSCRIBIRME AHORA</button>
   </header>
+
+  <img src="https://i.imgur.com/JS4xzVF.jpeg" style="width:100%; border-radius:20px; margin:30px 0;" alt="Formación IA">
 
   <div class="course-card">
     <h2>🛠️ Área Industrial & Tecnología 4.0</h2>
@@ -128,34 +146,33 @@
   </div>
 
   <div class="cert-section">
-    <div class="cert-icon">📜</div>
-    <h2 style="margin:0">Certificación Avalada</h2>
-    <p>Al completar cada curso, recibes un certificado con código QR único que acredita tus competencias en el uso de Herramientas de Inteligencia Artificial aplicadas a tu oficio.</p>
+    <div style="font-size: 50px;">📜</div>
+    <h2 style="justify-content: center;">Certificación Profesional</h2>
+    <p>Al finalizar, recibes un certificado con <b>Código QR</b> que avala tus conocimientos en herramientas de IA aplicadas a tu especialidad profesional.</p>
   </div>
 
-  <div style="margin: 40px 0;">
-    <h2 style="text-align: center;">Lo que dicen nuestros graduados</h2>
-    <div class="testimonials-grid">
-      <div class="testi-card">
-        "Gracias al curso de Reparación de PC con IA, ahora diagnostico fallas en la mitad del tiempo. ¡Mi taller creció un 40%!"
-        <span class="testi-author">— Carlos R., Técnico Electrónico</span>
-      </div>
-      <div class="testi-card">
-        "El curso de Marketing con IA me permitió automatizar mis ventas. La inversión de 20$ fue la mejor de mi año."
-        <span class="testi-author">— Elena M., Emprendedora Digital</span>
-      </div>
+  <div class="testimonials-grid">
+    <div class="testi-card">
+      "Aprendí a reparar PC usando IA para diagnósticos y mis clientes están fascinados. ¡Altamente recomendado!"
+      <span class="testi-author">— Carlos Rodríguez</span>
+    </div>
+    <div class="testi-card">
+      "El curso de Peluquería con IA me abrió la mente a nuevos diseños. Mi negocio ahora es mucho más moderno."
+      <span class="testi-author">— María Elena S.</span>
     </div>
   </div>
 
-  <div style="text-align: center; padding: 20px; border: 1px dashed var(--gold); border-radius: 15px; margin: 40px 0;">
-    <h3 style="color: var(--gold); margin: 0;">✅ Garantía de Aprendizaje</h3>
-    <p style="font-size: 0.9em; color: #aaa;">Acceso de por vida al contenido y soporte permanente vía Chat IA y WhatsApp.</p>
+  <button onclick="openModal()" class="btn-gold">RESERVAR MI CUPO (20$)</button>
+  <a href="https://wa.me/584224006612" class="btn-gold whatsapp-btn">HABLAR POR WHATSAPP</a>
+
+  <div class="course-card" style="border: 2px solid var(--gold); background: linear-gradient(145deg, #1a1a1a, #0a0a0a); text-align: center;">
+    <img src="https://i.imgur.com/rM1T7nK.png" alt="Asistente IA" style="width: 100px; height: 100px; border-radius: 50%; border: 2px solid var(--gold); margin-bottom: 15px; object-fit: cover;">
+    <h2 style="justify-content: center; margin-bottom: 10px;">¿Deseas saber más?</h2>
+    <p style="color: #ccc; margin-bottom: 20px;">Mi asistente virtual está conectada 24/7 para explicarte el contenido de los cursos, horarios y métodos de pago.</p>
+    <button onclick="openChatFromCard()" class="btn-gold" style="width: auto; padding: 15px 40px; font-size: 0.9em; margin: 0 auto;">🗨️ CONSULTAR A LA IA</button>
   </div>
 
-  <button onclick="openModal()" class="btn-gold">RESERVAR MI CUPO (20$)</button>
-  <a href="https://wa.me/584224006612" class="btn-gold whatsapp-btn">RESERVAR POR WHATSAPP</a>
-
-  <p style="text-align: center; color: #444; font-size: 0.8em; margin-top: 50px;">© 2026 Academia Divino Niño Jesús.</p>
+  <p style="text-align: center; color: #444; font-size: 0.8em; margin: 50px 0;">© 2026 Academia Divino Niño Jesús. Liderando el futuro.</p>
 </div>
 
 <div id="modalRegistro">
@@ -164,50 +181,64 @@
     <form id="sheet-form">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
       <input type="email" name="correo" placeholder="Correo electrónico" required>
-      <input type="tel" name="whatsapp" placeholder="WhatsApp" required>
+      <input type="tel" name="whatsapp" placeholder="WhatsApp (Ej: +58...)" required>
       <button type="submit" id="submitBtn" class="btn-gold" style="width:100%">ENVIAR DATOS</button>
-      <button type="button" onclick="closeModal()" style="background:none; border:none; color:#666; width:100%; margin-top:10px; cursor:pointer">Cancelar</button>
+      <button type="button" onclick="closeModal()" style="background:none; border:none; color:#666; width:100%; margin-top:10px; cursor:pointer">Cerrar</button>
     </form>
-    <div id="successMsg" style="display:none; color:#25d366; text-align:center; margin-top:15px; font-weight:bold;">✅ ¡Registro exitoso!</div>
+    <div id="successMsg" style="display:none; color:#25d366; text-align:center; margin-top:15px; font-weight:bold;">✅ ¡Datos enviados con éxito!</div>
   </div>
 </div>
 
 <div id="bot-wrapper">
   <div id="chat-window">
     <div class="chat-top">
-      <span>🤖 IA ACADÉMICA</span>
+      <span>🤖 ASISTENTE IA</span>
       <button onclick="toggleChat()" style="background:none; border:none; cursor:pointer; font-size:20px;">✕</button>
     </div>
     <div id="chat-messages">
-      <div><b>IA:</b> ¡Hola! 👋 ¿Sabías que por solo <b>20$</b> puedes aprender a usar IA en tu trabajo? ¿Qué curso te interesa?</div>
+      <div><b>IA:</b> ¡Hola! 👋 Soy tu asistente de la Academia. ¿Sobre qué curso de <b>20$</b> te gustaría recibir información hoy?</div>
     </div>
     <div class="chat-input-container">
-      <input id="chat-input" type="text" placeholder="Escribe tu duda...">
-      <button onclick="callGroq()" style="background:var(--gold); border:none; padding:10px; border-radius:8px; cursor:pointer;">▶</button>
+      <input id="chat-input" type="text" placeholder="Escribe tu duda aquí...">
+      <button onclick="callGroq()" style="background:var(--gold); border:none; padding:10px 15px; border-radius:8px; cursor:pointer; font-weight:bold;">▶</button>
     </div>
   </div>
-  <button onclick="toggleChat()" class="bot-trigger">🤖</button>
+  <button onclick="toggleChat()" class="bot-trigger">
+    <img src="https://i.imgur.com/rM1T7nK.png" alt="IA Asistente">
+  </button>
 </div>
 
 <script>
+  // CONFIGURACIÓN DE APIS (VERIFICA QUE SEAN TUS ID CORRECTOS)
   const scriptURL = 'https://script.google.com/macros/s/AKfycbz3xUdlictsCEdsIrSwDUK7F68hImDR8dLm3YsBM00RbmRjfJ0qy-DMNH6MOF60FDDCuQ/exec';
   const GROQ_URL = 'https://script.google.com/macros/s/AKfycbyKGKGzUHWSyni6qyAeOtFqOmQuW3d1nlzHxoKgICMW9YbvFB9JO4SZ0GQMPKPh1qRicw/exec';
 
+  // FUNCIONES DE INTERFAZ
   function openModal() { document.getElementById('modalRegistro').style.display = 'flex'; }
   function closeModal() { document.getElementById('modalRegistro').style.display = 'none'; }
   function toggleChat() { document.getElementById('chat-window').classList.toggle('active'); }
+  
+  function openChatFromCard() {
+    document.getElementById('chat-window').classList.add('active');
+    document.getElementById('chat-input').focus();
+    if(window.innerWidth < 600) { window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' }); }
+  }
 
+  // ENVÍO DE FORMULARIO A GOOGLE SHEETS
   document.getElementById('sheet-form').addEventListener('submit', function(e) {
     e.preventDefault();
     const btn = document.getElementById('submitBtn');
-    btn.innerText = "ENVIANDO...";
+    btn.innerText = "PROCESANDO...";
+    btn.disabled = true;
     fetch(scriptURL, { method: 'POST', body: new FormData(this)})
       .then(() => {
         document.getElementById('successMsg').style.display = 'block';
-        setTimeout(() => { closeModal(); this.reset(); btn.innerText = "ENVIAR DATOS"; document.getElementById('successMsg').style.display = 'none'; }, 2000);
-      });
+        setTimeout(() => { closeModal(); this.reset(); btn.innerText = "ENVIAR DATOS"; btn.disabled = false; document.getElementById('successMsg').style.display = 'none'; }, 2500);
+      })
+      .catch(() => { alert("Error al enviar. Intenta por WhatsApp."); btn.disabled = false; btn.innerText = "ENVIAR DATOS"; });
   });
 
+  // LOGICA DEL CHAT CON IA
   async function callGroq() {
     const input = document.getElementById('chat-input');
     const logs = document.getElementById('chat-messages');
@@ -228,10 +259,11 @@
       const data = await res.json();
       loading.innerHTML = `<b>IA:</b><br>${data.answer.replace(/\n/g, '<br>')}`;
     } catch {
-      loading.innerHTML = "Error. Contacta al +58 422 4006612.";
+      loading.innerHTML = "<b>IA:</b> Lo siento, tuve un problema de conexión. Por favor escríbenos al WhatsApp: <b>+58 422 4006612</b>.";
     }
     logs.scrollTop = logs.scrollHeight;
   }
+
   document.getElementById('chat-input').addEventListener('keypress', (e) => { if (e.key === 'Enter') callGroq(); });
 </script>
 
