--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academia Divino Niño Jesús | Formación Profesional con IA</title>
+  <title>Academia Divino Niño Jesús | Formación con IA</title>
   <style>
     :root {
       --gold: #ffe082;
@@ -16,7 +16,7 @@
     html { scroll-behavior: smooth; }
     body {
       margin: 0;
-      font-family: 'Inter', 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       background-color: var(--bg);
       color: var(--text);
       line-height: 1.6;
@@ -24,12 +24,10 @@
 
     .main-container { padding: 20px; max-width: 900px; margin: auto; }
 
-    /* HEADER */
-    header { text-align: center; padding: 60px 20px; border-bottom: 1px solid rgba(255, 224, 130, 0.2); }
+    header { text-align: center; padding: 50px 20px; border-bottom: 1px solid rgba(255, 224, 130, 0.2); }
     .logo-maestro { width: 220px; filter: drop-shadow(0 0 10px rgba(255,224,130,0.3)); margin-bottom: 20px; }
     h1 { font-size: 2.5rem; background: linear-gradient(90deg, var(--gold), #fff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin: 10px 0; }
 
-    /* TARJETAS DE CURSOS */
     .course-card {
       background: var(--card-bg); border-radius: 20px; padding: 30px; margin: 30px 0;
       border: 1px solid rgba(255, 255, 255, 0.05); box-shadow: 0 10px 30px rgba(0,0,0,0.5);
@@ -42,7 +40,6 @@
     li { padding: 12px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; align-items: center; }
     li::before { content: "⚡"; margin-right: 15px; color: var(--gold); }
 
-    /* BOTONES */
     .btn-gold {
       display: block; width: 100%; max-width: 380px; padding: 20px; margin: 15px auto;
       background: linear-gradient(135deg, var(--gold), var(--dark-gold));
@@ -51,18 +48,13 @@
     }
     .btn-gold:hover { transform: scale(1.05); box-shadow: 0 0 20px rgba(255,224,130,0.4); }
     .whatsapp-btn { background: #25d366; color: white; }
-    .whatsapp-btn:hover { background: #20ba5a; box-shadow: 0 0 20px rgba(37,211,102,0.4); }
 
-    /* CERTIFICACIÓN Y TESTIMONIOS */
     .cert-section {
       text-align: center; background: linear-gradient(rgba(255,224,130,0.05), transparent);
       padding: 40px; border-radius: 20px; border: 1px solid rgba(255,224,130,0.2); margin: 40px 0;
     }
-    .testimonials-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin: 30px 0; }
-    .testi-card { background: #111; padding: 20px; border-radius: 15px; border-left: 4px solid var(--gold); font-style: italic; }
-    .testi-author { display: block; margin-top: 10px; font-weight: bold; color: var(--gold); font-style: normal; }
 
-    /* CHATBOT FLOTANTE CON ROSTRO REAL */
+    /* CHATBOT FLOTANTE */
     #bot-wrapper { position: fixed; bottom: 30px; right: 30px; z-index: 10000; }
     #chat-window {
       display: none; width: 340px; height: 500px; background: #121212;
@@ -82,30 +74,23 @@
       border: none; cursor: pointer; box-shadow: 0 5px 20px rgba(255,224,130,0.4);
       transition: 0.3s; overflow: hidden; padding: 0;
     }
-    .bot-trigger:hover { transform: scale(1.1); }
     .bot-trigger img { width: 100%; height: 100%; object-fit: cover; border: 2px solid var(--gold); border-radius: 50%; }
 
-    /* MODAL */
     #modalRegistro {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background: rgba(0,0,0,0.9); z-index: 99999; justify-content: center; align-items: center;
     }
     .modal-box { background: var(--card-bg); padding: 35px; border-radius: 25px; border: 1px solid var(--gold); width: 90%; max-width: 400px; }
     .modal-box input { width: 100%; padding: 15px; margin: 10px 0; background: #222; border: 1px solid #444; color: #fff; border-radius: 10px; box-sizing: border-box; }
-
-    @media (max-width: 600px) {
-      .testimonials-grid { grid-template-columns: 1fr; }
-      #chat-window { width: 300px; right: 10px; }
-    }
   </style>
 </head>
 <body>
 
 <div class="main-container">
   <header>
-    <img src="https://i.imgur.com/msGwxhP.png" alt="Logo Academia" class="logo-maestro">
+    <img src="https://i.imgur.com/msGwxhP.png" alt="Logo" class="logo-maestro">
     <h1>Academia Divino Niño Jesús</h1>
-    <p>Educación Técnica de Vanguardia con IA</p>
+    <p>Educación Técnica impulsada por IA</p>
     <button onclick="openModal()" class="btn-gold">🚀 INSCRIBIRME AHORA</button>
   </header>
 
@@ -118,74 +103,59 @@
       <li>Mantenimiento Predictivo con IA</li>
       <li>IA en Diagnóstico Electrónico de Vehículos</li>
       <li>IA aplicada a Reparación de Computadoras y Celulares</li>
-      <li>Seguridad Industrial con Monitoreo Inteligente</li>
+      <li>Seguridad Industrial Inteligente</li>
     </ul>
   </div>
 
   <div class="course-card">
     <h2>📊 Área Comercial & Negocios Digitales</h2>
     <ul>
-      <li>Marketing Digital con Inteligencia Artificial</li>
+      <li>Marketing Digital con IA</li>
       <li>Chatbots con IA para Atención al Cliente</li>
-      <li>Inteligencia Artificial en Recursos Humanos (RRHH)</li>
+      <li>Inteligencia Artificial en Recursos Humanos</li>
       <li>Análisis de Datos con IA en Excel</li>
-      <li>Enseñanza de Idiomas (Inglés) con IA</li>
       <li>IA en Logística y Gestión Aduanera</li>
-      <li>Computación con Herramientas IA</li>
     </ul>
   </div>
 
   <div class="course-card">
-    <h2>💅 Área Artesanal & Creatividad con IA</h2>
+    <h2>💅 Área Artesanal & Creatividad</h2>
     <ul>
       <li>Diseño Asistido con IA en Peluquería y Maquillaje</li>
-      <li>Moda y Corte con IA: Patrones Automatizados</li>
+      <li>Moda y Corte con IA</li>
       <li>Ajedrez con Entrenamiento basado en IA</li>
       <li>Manualidades y Creatividad Digital con IA</li>
     </ul>
   </div>
 
   <div class="cert-section">
-    <div style="font-size: 50px;">📜</div>
     <h2 style="justify-content: center;">Certificación Profesional</h2>
-    <p>Al finalizar, recibes un certificado con <b>Código QR</b> que avala tus conocimientos en herramientas de IA aplicadas a tu especialidad profesional.</p>
-  </div>
-
-  <div class="testimonials-grid">
-    <div class="testi-card">
-      "Aprendí a reparar PC usando IA para diagnósticos y mis clientes están fascinados. ¡Altamente recomendado!"
-      <span class="testi-author">— Carlos Rodríguez</span>
-    </div>
-    <div class="testi-card">
-      "El curso de Peluquería con IA me abrió la mente a nuevos diseños. Mi negocio ahora es mucho más moderno."
-      <span class="testi-author">— María Elena S.</span>
-    </div>
+    <p>Recibe un certificado con <b>Código QR</b> que avala tus nuevas habilidades tecnológicas.</p>
   </div>
 
   <button onclick="openModal()" class="btn-gold">RESERVAR MI CUPO (20$)</button>
-  <a href="https://wa.me/584224006612" class="btn-gold whatsapp-btn">HABLAR POR WHATSAPP</a>
+  <a href="https://wa.me/584224006612" class="btn-gold whatsapp-btn">RESERVAR POR WHATSAPP</a>
 
-  <div class="course-card" style="border: 2px solid var(--gold); background: linear-gradient(145deg, #1a1a1a, #0a0a0a); text-align: center;">
-    <img src="https://i.imgur.com/rM1T7nK.png" alt="Asistente IA" style="width: 100px; height: 100px; border-radius: 50%; border: 2px solid var(--gold); margin-bottom: 15px; object-fit: cover;">
-    <h2 style="justify-content: center; margin-bottom: 10px;">¿Deseas saber más?</h2>
-    <p style="color: #ccc; margin-bottom: 20px;">Mi asistente virtual está conectada 24/7 para explicarte el contenido de los cursos, horarios y métodos de pago.</p>
-    <button onclick="openChatFromCard()" class="btn-gold" style="width: auto; padding: 15px 40px; font-size: 0.9em; margin: 0 auto;">🗨️ CONSULTAR A LA IA</button>
+  <div class="course-card" style="border: 2px solid var(--gold); text-align: center;">
+    <img src="https://i.imgur.com/FwSvlok.jpeg" alt="Asistente IA" style="width: 110px; height: 110px; border-radius: 50%; border: 2px solid var(--gold); margin-bottom: 15px; object-fit: cover;">
+    <h2 style="justify-content: center;">¿Tienes alguna pregunta?</h2>
+    <p>Nuestra asistente está lista para ayudarte con información sobre horarios y pagos.</p>
+    <button onclick="openChatFromCard()" class="btn-gold" style="width: auto; padding: 15px 40px; margin: 0 auto;">🗨️ CHATEAR CON LA IA</button>
   </div>
 
-  <p style="text-align: center; color: #444; font-size: 0.8em; margin: 50px 0;">© 2026 Academia Divino Niño Jesús. Liderando el futuro.</p>
+  <p style="text-align: center; color: #444; font-size: 0.8em;">© 2026 Academia Divino Niño Jesús.</p>
 </div>
 
 <div id="modalRegistro">
   <div class="modal-box">
-    <h2 style="text-align:center; margin-top:0">Pre-Inscripción</h2>
+    <h2 style="text-align:center">Pre-Inscripción</h2>
     <form id="sheet-form">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
       <input type="email" name="correo" placeholder="Correo electrónico" required>
-      <input type="tel" name="whatsapp" placeholder="WhatsApp (Ej: +58...)" required>
+      <input type="tel" name="whatsapp" placeholder="WhatsApp" required>
       <button type="submit" id="submitBtn" class="btn-gold" style="width:100%">ENVIAR DATOS</button>
       <button type="button" onclick="closeModal()" style="background:none; border:none; color:#666; width:100%; margin-top:10px; cursor:pointer">Cerrar</button>
     </form>
-    <div id="successMsg" style="display:none; color:#25d366; text-align:center; margin-top:15px; font-weight:bold;">✅ ¡Datos enviados con éxito!</div>
   </div>
 </div>
 
@@ -196,7 +166,7 @@
       <button onclick="toggleChat()" style="background:none; border:none; cursor:pointer; font-size:20px;">✕</button>
     </div>
     <div id="chat-messages">
-      <div><b>IA:</b> ¡Hola! 👋 Soy tu asistente de la Academia. ¿Sobre qué curso de <b>20$</b> te gustaría recibir información hoy?</div>
+      <div><b>IA:</b> ¡Hola! 👋 Soy tu asistente virtual. ¿En qué curso de <b>20$</b> puedo ayudarte hoy?</div>
     </div>
     <div class="chat-input-container">
       <input id="chat-input" type="text" placeholder="Escribe tu duda aquí...">
@@ -204,41 +174,29 @@
     </div>
   </div>
   <button onclick="toggleChat()" class="bot-trigger">
-    <img src="https://i.imgur.com/rM1T7nK.png" alt="IA Asistente">
+    <img src="https://i.imgur.com/FwSvlok.jpeg" alt="IA Asistente">
   </button>
 </div>
 
 <script>
-  // CONFIGURACIÓN DE APIS (VERIFICA QUE SEAN TUS ID CORRECTOS)
   const scriptURL = 'https://script.google.com/macros/s/AKfycbz3xUdlictsCEdsIrSwDUK7F68hImDR8dLm3YsBM00RbmRjfJ0qy-DMNH6MOF60FDDCuQ/exec';
   const GROQ_URL = 'https://script.google.com/macros/s/AKfycbyKGKGzUHWSyni6qyAeOtFqOmQuW3d1nlzHxoKgICMW9YbvFB9JO4SZ0GQMPKPh1qRicw/exec';
 
-  // FUNCIONES DE INTERFAZ
   function openModal() { document.getElementById('modalRegistro').style.display = 'flex'; }
   function closeModal() { document.getElementById('modalRegistro').style.display = 'none'; }
   function toggleChat() { document.getElementById('chat-window').classList.toggle('active'); }
-  
-  function openChatFromCard() {
-    document.getElementById('chat-window').classList.add('active');
-    document.getElementById('chat-input').focus();
-    if(window.innerWidth < 600) { window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' }); }
-  }
+  function openChatFromCard() { document.getElementById('chat-window').classList.add('active'); document.getElementById('chat-input').focus(); }
 
-  // ENVÍO DE FORMULARIO A GOOGLE SHEETS
+  // ENVÍO DE FORMULARIO
   document.getElementById('sheet-form').addEventListener('submit', function(e) {
     e.preventDefault();
     const btn = document.getElementById('submitBtn');
-    btn.innerText = "PROCESANDO...";
-    btn.disabled = true;
+    btn.innerText = "ENVIANDO...";
     fetch(scriptURL, { method: 'POST', body: new FormData(this)})
-      .then(() => {
-        document.getElementById('successMsg').style.display = 'block';
-        setTimeout(() => { closeModal(); this.reset(); btn.innerText = "ENVIAR DATOS"; btn.disabled = false; document.getElementById('successMsg').style.display = 'none'; }, 2500);
-      })
-      .catch(() => { alert("Error al enviar. Intenta por WhatsApp."); btn.disabled = false; btn.innerText = "ENVIAR DATOS"; });
+      .then(() => { alert("¡Registro exitoso!"); closeModal(); this.reset(); btn.innerText = "ENVIAR DATOS"; });
   });
 
-  // LOGICA DEL CHAT CON IA
+  // LLAMADA A IA
   async function callGroq() {
     const input = document.getElementById('chat-input');
     const logs = document.getElementById('chat-messages');
@@ -250,7 +208,6 @@
     logs.scrollTop = logs.scrollHeight;
 
     const loading = document.createElement('div');
-    loading.style.marginTop = "10px";
     loading.innerHTML = "<i>IA respondiendo...</i>";
     logs.appendChild(loading);
 
@@ -259,10 +216,18 @@
       const data = await res.json();
       loading.innerHTML = `<b>IA:</b><br>${data.answer.replace(/\n/g, '<br>')}`;
     } catch {
-      loading.innerHTML = "<b>IA:</b> Lo siento, tuve un problema de conexión. Por favor escríbenos al WhatsApp: <b>+58 422 4006612</b>.";
+      loading.innerHTML = "Error de conexión. Contacta al +58 422 4006612.";
     }
     logs.scrollTop = logs.scrollHeight;
   }
+
+  // APERTURA AUTOMÁTICA A LOS 5 SEGUNDOS
+  window.addEventListener('load', () => {
+    setTimeout(() => {
+      const chatWin = document.getElementById('chat-window');
+      if (!chatWin.classList.contains('active')) { toggleChat(); }
+    }, 5000);
+  });
 
   document.getElementById('chat-input').addEventListener('keypress', (e) => { if (e.key === 'Enter') callGroq(); });
 </script>
